--- a/index.html
+++ b/index.html
@@ -5,20 +5,183 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Circles</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="paper/dist/paper-full.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.13/howler.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <script type="text/paperscript" canvas="myCanvas">
+
+        var keyData = {
+            q: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            w: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            e: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            r: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            t: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            y: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            u: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            i: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            o: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            p: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            a: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            s: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            d: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            f: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            g: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            h: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            j: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            k: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            l: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            z: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            x: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            c: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            v: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            },
+            b: {
+                color: "yellow",
+                sound : new Howl({
+                    src: ['sounds/confetti.mp3']
+                })
+            }
+            n: {
+                color: "purple",
+                sound : new Howl({
+                    src: ['sounds/clay.mp3']
+                })
+            },
+            m: {
+                color: "green",
+                sound : new Howl({
+                    src: ['sounds/bubbles.mp3']
+                })
+            }
+        }
 
         var circles = [];
 
         function onKeyDown(event) {
-            var maxPoint = new Point(view.size.width, view.size.height);
-            var randomPoint = Point.random();
-            var point = maxPoint * randomPoint;
-            // When a key is pressed
-            var newCircle = new Path.Circle(point, 500);
-            newCircle.fillColor = "orange";
-            circles.push(newCircle);
+            if(keyData[event.key]) {
+                var maxPoint = new Point(view.size.width, view.size.height);
+                var randomPoint = Point.random();
+                var point = maxPoint * randomPoint;
+                var newCircle = new Path.Circle(point, 500);
+                newCircle.fillColor = keyData[event.key].color;
+                keyData[event.key].sound.play();
+                circles.push(newCircle);
+            }  
         }
 
         function onFrame(event) {
@@ -27,6 +190,8 @@
                 circles[i].scale(.9);
             }
         }
+
+
 
 
     </script>
