add all the sounds and colors to the keyData object

--- a/index.html
+++ b/index.html
@@ -27,145 +27,145 @@
             e: {
                 color: "yellow",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/clay-loop.mp3']
                 })
-            }
+            },
             r: {
-                color: "purple",
+                color: "red",
                 sound : new Howl({
                     src: ['sounds/clay.mp3']
                 })
             },
             t: {
-                color: "green",
+                color: "#44ddee",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/corona.mp3']
                 })
             },
             y: {
-                color: "yellow",
+                color: "#77aacc",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/dotted-spiral.mp3']
                 })
-            }
+            },
             u: {
-                color: "purple",
+                color: "#22aaee",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/flash-1.mp3']
                 })
             },
             i: {
-                color: "green",
+                color: "#3322ee",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/flash-2.mp3']
                 })
             },
             o: {
-                color: "yellow",
+                color: "#44ddcc",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/flash-3.mp3']
                 })
-            }
+            },
             p: {
-                color: "purple",
+                color: "#aaccee",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/groove-loop.mp3']
                 })
             },
             a: {
-                color: "green",
+                color: "#eeddaa",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/moon.mp3']
                 })
             },
             s: {
-                color: "yellow",
+                color: "#22aaff",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/pinwheel.mp3']
                 })
-            }
+            },
             d: {
-                color: "purple",
+                color: "#eecc11",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/piston-1.mp3']
                 })
             },
             f: {
-                color: "green",
+                color: "#11aaee",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/piston-2.mp3']
                 })
             },
             g: {
-                color: "yellow",
+                color: "#ddaa33",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/piston-3.mp3']
                 })
-            }
+            },
             h: {
-                color: "purple",
+                color: "#aacc24",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/prism-1.mp3']
                 })
             },
             j: {
-                color: "green",
+                color: "#ac32ea",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/prism-2.mp3']
                 })
             },
             k: {
-                color: "yellow",
+                color: "#aceac3",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/prism-3.mp3']
                 })
-            }
+            },
             l: {
-                color: "purple",
+                color: "#2244dd",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/silent.mp3']
                 })
             },
             z: {
-                color: "green",
+                color: "#432acc",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/splits.mp3']
                 })
             },
             x: {
-                color: "yellow",
+                color: "#eeacea",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/squiggle.mp3']
                 })
-            }
+            },
             c: {
-                color: "purple",
+                color: "#eaeaae",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/strike.mp3']
                 })
             },
             v: {
-                color: "green",
+                color: "#222ace",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/suspension.mp3']
                 })
             },
             b: {
-                color: "yellow",
+                color: "#2323ae",
                 sound : new Howl({
-                    src: ['sounds/confetti.mp3']
+                    src: ['sounds/timer.mp3']
                 })
-            }
+            },
             n: {
-                color: "purple",
+                color: "#3452ac",
                 sound : new Howl({
-                    src: ['sounds/clay.mp3']
+                    src: ['sounds/veil.mp3']
                 })
             },
             m: {
-                color: "green",
+                color: "#42423c",
                 sound : new Howl({
-                    src: ['sounds/bubbles.mp3']
+                    src: ['sounds/zig-zag.mp3']
                 })
             }
         }
