correct one sound name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             e: {
                 color: "yellow",
                 sound : new Howl({
-                    src: ['sounds/clay-loop.mp3']
+                    src: ['sounds/clap-loop.mp3']
                 })
             },
             r: {
